--- a/samples/SharedDemo/Demos/BotAnswerWidget.razor
+++ b/samples/SharedDemo/Demos/BotAnswerWidget.razor
@@ -6,9 +6,9 @@
                 <input type="text" class="form-control"
                        @bind-value="Node.Answer"
                        placeholder="Answer"
-                       @onmousedown:stopPropagation
-                       @onmouseup:stopPropagation
-                       @onmousemove:stopPropagation />
+                       @onpointerdown:stopPropagation
+                       @onpointerup:stopPropagation
+                       @onpointermove:stopPropagation />
             </div>
         </div>
     </div>
