Add initial version of selectables' ordering (nodes, groups and links)

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -10,36 +10,41 @@
      @onwheel:stopPropagation>
 
     <svg class="diagram-svg-layer" style="@GetLayerStyle(BlazorDiagram.Options.LinksLayerOrder)">
-        @foreach (var node in BlazorDiagram.Nodes.OfType<SvgNodeModel>().Where(n => n.Group == null))
-        {
-            <NodeRenderer @key="node" Node="node"/>
-        }
 
-        @foreach (var group in BlazorDiagram.Groups.OfType<SvgGroupModel>().Where(n => n.Group == null))
+        @foreach (var model in BlazorDiagram.OrderedSelectables)
         {
-            <GroupRenderer @key="group" Group="group"/>
-        }
-
-        @foreach (var link in BlazorDiagram.Links)
-        {
-            <LinkRenderer @key="link" Link="link"/>
+            if (model is SvgNodeModel node && node.Group == null)
+            {
+                <NodeRenderer @key="node" Node="node" />
+            }
+            else if (model is SvgGroupModel group && group.Group == null)
+            {
+                <GroupRenderer @key="group" Group="group" />
+            }
+            else if (model is BaseLinkModel link)
+            {
+                <LinkRenderer @key="link" Link="link" />
+            }
         }
 
         <ControlsLayerRenderer Svg="@true"></ControlsLayerRenderer>
     </svg>
 
     <div class="diagram-html-layer" style="@GetLayerStyle(BlazorDiagram.Options.NodesLayerOrder)">
-        @foreach (var group in BlazorDiagram.Groups.Where(n => n is not SvgGroupModel))
-        {
-            if (group.Group != null)
-                continue;
-            
-            <GroupRenderer @key="group" Group="group"/>
-        }
 
-        @foreach (var node in BlazorDiagram.Nodes.Where(n => n is not SvgNodeModel && n.Group == null))
+        @foreach (var model in BlazorDiagram.OrderedSelectables)
         {
-            <NodeRenderer @key="node" Node="node"/>
+            if (model is GroupModel group)
+            {
+                if (group.Group == null && group is not SvgGroupModel)
+                {
+                    <GroupRenderer @key="group" Group="group" />
+                }
+            }
+            else if (model is NodeModel node && node.Group == null && node is not SvgNodeModel)
+            {
+                <NodeRenderer @key="node" Node="node" />
+            }
         }
 
         <ControlsLayerRenderer Svg="@false"></ControlsLayerRenderer>
