--- a/samples/SharedDemo/Demos/Groups/Dynamic.razor
+++ b/samples/SharedDemo/Demos/Groups/Dynamic.razor
@@ -11,7 +11,8 @@
 <CascadingValue Value="_blazorDiagram">
     <DiagramCanvas>
         <Widgets>
-            <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
+            <NavigatorWidget Width="300" Height="200"
+                             Style="position: absolute; bottom: 15px; right: 15px; border: 1px solid black;"></NavigatorWidget>
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
