--- a/samples/SharedDemo/Demos/Groups/Factory.razor
+++ b/samples/SharedDemo/Demos/Groups/Factory.razor
@@ -5,7 +5,8 @@
 <CascadingValue Value="BlazorDiagram">
     <DiagramCanvas>
         <Widgets>
-            <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
+            <NavigatorWidget Width="300" Height="200"
+                             Style="position: absolute; bottom: 15px; right: 15px; border: 1px solid black;"></NavigatorWidget>
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
