Add AdditionalSvg and AdditionalHtml render fragments to DiagramCanvas

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -28,6 +28,8 @@
         }
 
         <ControlsLayerRenderer Svg="@true"></ControlsLayerRenderer>
+
+        @AdditionalSvg
     </svg>
 
     <div class="diagram-html-layer" style="@GetLayerStyle(BlazorDiagram.Options.NodesLayerOrder)">
@@ -48,6 +50,8 @@
         }
 
         <ControlsLayerRenderer Svg="@false"></ControlsLayerRenderer>
+
+        @AdditionalHtml
     </div>
 
     @Widgets
