Add FullPath to PathGeneratorResult and Fix issue where only parts of a link would have a hover effect instead of all

--- a/src/Blazor.Diagrams/Components/LinkWidget.razor
+++ b/src/Blazor.Diagrams/Components/LinkWidget.razor
@@ -1,26 +1,29 @@
 ﻿@{
     var color = Link.Selected ? Link.SelectedColor ?? BlazorDiagram.Options.Links.DefaultSelectedColor : Link.Color ?? BlazorDiagram.Options.Links.DefaultColor;
-    var result = Link.GeneratedPathResult;
+    var result = Link.PathGeneratorResult;
+    if (result == null)
+        return;
+
+    var d = result.FullPath.ToString();
 }
 
-@for (var i = 0; i < result.Paths.Length; i++)
-{
-    var index = i;
-    var d = result.Paths[i].ToString();
-    <path d="@d"
+<path d="@d"
       stroke-width="@Link.Width.ToInvariantString()"
       fill="none"
       stroke="@color" />
 
-    <path class="selection-helper"
-      stroke="@color"
-      stroke-width="12"
-      d="@d"
-      stroke-linecap="butt"
-      stroke-opacity="0"
-      fill="none"
-      @onpointerdown="e => OnPointerDown(e, index)"
-      @onpointerdown:stopPropagation="@Link.Segmentable" />
+@if (Link.Vertices.Count == 0)
+{
+    @GetSelectionHelperPath(color, d, 0)
+}
+else
+{
+    @for (var i = 0; i < result.Paths.Length; i++)
+    {
+        d = result.Paths[i].ToString();
+        var index = i;
+        @GetSelectionHelperPath(color, d, index)
+    }
 }
 
 @if (Link.SourceMarker != null && result.SourceMarkerAngle != null && result.SourceMarkerPosition != null)
@@ -54,5 +57,5 @@
 
 @foreach (var label in Link.Labels)
 {
-    <LinkLabelRenderer @key="label.Id" Label="@label" Paths="@result.Paths" />
+    <LinkLabelRenderer @key="label.Id" Label="@label" Path="@result.FullPath" />
 }
