--- a/site/Site/Components/Landing/LandingShowcaseDiagram.razor
+++ b/site/Site/Components/Landing/LandingShowcaseDiagram.razor
@@ -1,4 +1,4 @@
-<section class="bg-white pt-24 text-black">
+<section class="bg-white pt-24 text-black" style="user-select: none;">
     <div style="width: 100%; height: 500px; position: relative;">
         <CascadingValue Value="_diagram">
             <DiagramCanvas>
@@ -10,9 +10,9 @@
         </CascadingValue>
 
         <div class="absolute flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left" style="top: 40px; right: 40px;">
-            <h1 class="my-4 text-5xl font-bold leading-tight">
+            <h2 class="my-4 text-5xl font-bold leading-tight">
                 Blazor Diagrams
-            </h1>
+            </h2>
             <p class="leading-normal text-2xl mb-8">
                 A fully customizable, extensible and all-purpose <br/> open-source diagrams library for Blazor
             </p>
