--- a/site/Site/_Imports.razor
+++ b/site/Site/_Imports.razor
@@ -10,8 +10,12 @@
 @using Site.Shared
 @using Site.Components
 @using Site.Components.Landing
+@using Site.Components.Landing.SvgAndHtml
+@using Site.Components.Landing.Groups
 @using Site.Models
 @using Site.Models.Landing
+@using Site.Models.Landing.Groups
+@using Site.Models.Landing.SvgAndHtml
 @using Blazor.Diagrams.Core;
 @using Blazor.Diagrams.Core.Models;
 @using Blazor.Diagrams.Components;
