--- a/site/Site/Pages/Landing/Index.razor
+++ b/site/Site/Pages/Landing/Index.razor
@@ -28,6 +28,8 @@
 
 <StatisticsLine />
 
+<FeaturesExample />
+
 <SvgAndHtmlExample />
 
 <WidgetsExample />
@@ -57,15 +59,15 @@
 
 <section class="container mx-auto text-center py-6 mb-12">
     <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-        Call to Action
+        Get in touch
     </h2>
     <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
     </div>
     <h3 class="my-4 text-3xl leading-tight">
-        Main Hero Message to sell yourself!
+        Don't hesitate to ask about anything either on GitHub or even by email!
     </h3>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Action!
-    </button>
+    @* <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    Action!
+    </button>*@
 </section>
