--- a/site/Site/_Imports.razor
+++ b/site/Site/_Imports.razor
@@ -12,6 +12,7 @@
 @using Site.Components.Landing
 @using Site.Components.Landing.SvgAndHtml
 @using Site.Components.Landing.Groups
+@using Site.Components.Landing.Features
 @using Site.Models
 @using Site.Models.Landing
 @using Site.Models.Landing.Groups
