--- a/site/Site/Shared/LandingLayout.razor
+++ b/site/Site/Shared/LandingLayout.razor
@@ -20,17 +20,19 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 lg:bg-transparent text-black p-4 lg:p-0 z-20 bg-white" id="nav-content">
             <ul class="list-reset lg:flex justify-end flex-1 items-center">
                 <li class="mr-3">
-                    <a class="inline-block py-2 px-4 no-underline hover:text-gray-800 hover:text-underline" href="#">
+                    <a class="font-bold inline-block py-2 px-4 no-underline hover:text-gray-800 hover:text-underline" href="#">
                         Documentation
                     </a>
                 </li>
                 <li class="mr-3">
-                    <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">
+                    <a class="font-bold inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">
                         Examples
                     </a>
                 </li>
                 <li class="mr-3">
-                    <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">
+                    <a class="font-bold inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4"
+                       href="https://github.com/Blazor-Diagrams/Blazor.Diagrams"
+                       target="_blank">
                         GitHub
                     </a>
                 </li>
