Add GettingStarted section in Documentation

--- a/site/Site/Components/Landing/LandingShowcaseDiagram.razor.css
+++ b/site/Site/Components/Landing/LandingShowcaseDiagram.razor.css
@@ -1,4 +1,4 @@
-::deep g.link path:not(.selection-helper) {
+::deep g.diagram-link path:not(.selection-helper) {
     stroke-dasharray: 5;
     animation: dash .5s linear infinite;
 }
