--- a/site/Site/_Imports.razor
+++ b/site/Site/_Imports.razor
@@ -17,10 +17,14 @@
 @using Site.Models.Landing
 @using Site.Models.Landing.Groups
 @using Site.Models.Landing.SvgAndHtml
-@using Blazor.Diagrams.Core;
-@using Blazor.Diagrams.Core.Models;
-@using Blazor.Diagrams.Components;
-@using Blazor.Diagrams.Core.Extensions;
-@using Blazor.Diagrams.Core.Geometry;
-@using Blazor.Diagrams.Components.Renderers;
-@using Blazor.Diagrams.Components.Widgets;
+@using Site.Models.Documentation
+@using Blazor.Diagrams.Core
+@using Blazor.Diagrams.Core.Models
+@using Blazor.Diagrams.Components
+@using Blazor.Diagrams.Core.Extensions
+@using Blazor.Diagrams.Core.Geometry
+@using Blazor.Diagrams.Components.Renderers
+@using Blazor.Diagrams.Components.Widgets
+@using Site.Static
+@using Site.Components.Documentation
+@using Blazor.Diagrams
