Add Layers, Behaviors, Options and API diagram sections in Documentation

--- a/site/Site/Pages/Documentation/GettingStarted/Display.razor
+++ b/site/Site/Pages/Documentation/GettingStarted/Display.razor
@@ -29,7 +29,7 @@ Now create a scoped CSS file with the following content:
 }
 </code></pre>
 
-Now you have a visible container, let's display the diagram:
+Now that we have a visible container, let's display the diagram:
 
 <div class="filename">MyDiagram.razor</div>
 <pre><code class="language-cshtml">
