--- a/site/Site/Shared/LandingLayout.razor
+++ b/site/Site/Shared/LandingLayout.razor
@@ -43,9 +43,9 @@
                     </a>
                 </li>
             </ul>
-            <button id="navAction" class="mx-auto lg:mx-0 hover:no-underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient text-white">
+            <a href="/documentation/installation" class="mx-auto lg:mx-0 hover:no-underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient text-white">
                 Get started
-            </button>
+            </a>
         </div>
     </div>
 </nav>
