--- a/site/Site/wwwroot/css/app.css
+++ b/site/Site/wwwroot/css/app.css
@@ -609,6 +609,26 @@ h3 {
   font-weight: 700;
 }
 
+table {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  table-layout: auto;
+  border-collapse: collapse;
+}
+
+tr {
+  border-bottom-width: 1px;
+}
+
+td,  th {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: left;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -776,12 +796,12 @@ h3 {
   margin-bottom: 1rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .block {
@@ -798,6 +818,10 @@ h3 {
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .grid {
@@ -1195,6 +1219,11 @@ h3 {
   line-height: 2.25rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1205,6 +1234,10 @@ h3 {
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
