--- a/site/Site/Pages/Documentation/Diagram/Api.razor
+++ b/site/Site/Pages/Documentation/Diagram/Api.razor
@@ -358,4 +358,5 @@
     </tbody>
 </table>
 
-<NavigationButtons />
+<NavigationButtons PreviousTitle="Options"
+                   PreviousLink="/documentation/diagram-options" />
