Add Groups Documentation and Keyboards Shortcuts

--- a/site/Site/Pages/Documentation/Diagram/Options.razor
+++ b/site/Site/Pages/Documentation/Diagram/Options.razor
@@ -280,5 +280,5 @@
 
 <NavigationButtons PreviousTitle="Behaviors"
                    PreviousLink="/documentation/diagram-behaviors"
-                   NextTitle="API"
-                   NextLink="/documentation/diagram-api" />
+                   NextTitle="Keyboard Shortcuts"
+                   NextLink="/documentation/keyboard-shortcuts" />
