--- a/site/Site/Pages/Documentation/Groups/SVG.razor
+++ b/site/Site/Pages/Documentation/Groups/SVG.razor
@@ -29,6 +29,8 @@
 &lt;/g&gt;
 </code></pre>
 
+<p>The <code>rect</code> is there for you to be able to style the background of the group, since we can't style <code>g</code> elements.</p>
+
 <h2>Creating a SVG group</h2>
 
 <h3>Interactively</h3>
