--- a/site/Site/Pages/Documentation/Diagram/Behaviors.razor
+++ b/site/Site/Pages/Documentation/Diagram/Behaviors.razor
@@ -114,7 +114,7 @@ Diagram.UnregisterBehavior&lt;SelectionBehavior&gt;();
 Diagram.RegisterBehavior(new MySelectionBehavior(Diagram));
 </code></pre>
 
-<NavigationButtons PreviousLink="/documentation/diagram-layers"
-                   PreviousTitle="Layers"
+<NavigationButtons PreviousLink="/documentation/diagram"
+                   PreviousTitle="Overview"
                    NextTitle="Options"
                    NextLink="/documentation/diagram-options" />
