Nodes can be made resizable (#2)
Resizers can be added to a node. Dragging a resizer resizes the node.

---------

Co-authored-by: Matt Swain <matthew.swain@wisetechglobal.com>

--- a/src/Blazor.Diagrams/Components/DefaultGroupWidget.razor
+++ b/src/Blazor.Diagrams/Components/DefaultGroupWidget.razor
@@ -2,7 +2,6 @@
 
     [Parameter]
     public GroupModel Group { get; set; } = null!;
-
 }
 
 <GroupNodes Group="Group"/>
@@ -10,4 +9,8 @@
 @foreach (var port in Group.Ports)
 {
     <PortRenderer @key="port" Port="port" Class="group-port"></PortRenderer>
+}
+@foreach (var resizer in Group.Resizers)
+{
+    <ResizerRenderer @key="resizer" Resizer="resizer"></ResizerRenderer>
 }
