Add Nodes customization

--- a/site/Site/Pages/Documentation/Diagram/Overview.razor
+++ b/site/Site/Pages/Documentation/Diagram/Overview.razor
@@ -28,6 +28,8 @@ You can add your own CSS classes using the <code>Class</code> parameter.
 
 <pre><code class="language-html">
 &lt;svg class=&quot;diagram-svg-layer&quot; style=&quot;transform: translate(0px, 0px) scale(1); z-index: 0;&quot;&gt;
+    &lt;!-- Links, Nodes, Controls, ... --&gt;
+&lt;/svg&gt;
 </code></pre>
 
 <p>
